# open-flow-algorithm

./: AGENTS.md  CLAUDE.md  README.md  README_zh.md  todo.md
.agent/skills/frontend-design/: SKILL.md
.agent/skills/karpathy-guidelines/: SKILL.md
.agent/skills/tauri/: SKILL.md
.agent/skills/vueflow/: SKILL.md
.agent/skills/vueuse/: SKILL.md
.claude/: settings.json
.claude/skills/git-workflow/: SKILL.md
.github/workflows/: deploy.yml  release.yml
app/: .editorconfig  .gitignore  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
app/dist-web/: index.html
app/dist-web/assets/: index-B0hcOXtZ.js  index-BHzyQNiI.js  index-BUM54AEE.css  index-BdW01u1n.css  (+11 more)
app/python-backend/: main.py  setup_embedded_python.py
app/src/: App.vue  fprg-ast.ts  i18n.ts  main.ts  tailwind.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  python_bridge.rs
demo-f-g/: index.html  package.json  pnpm-lock.yaml
demo-f-g/src-tauri/: Cargo.toml
demo-f-g/src-tauri/capabilities/: default.json
demo-f-g/src-tauri/src/: main.rs
docs/: assign.md  call.md  declare.md  do.md  for.md  if.md  input.md  layout.md  more.md  output.md  while.md
examples/fprgs/: test_for_import.fprg
examples/pys/: fib.py
python-backend/: requirements.txt
python-backend/flowgorithm/: code_generator.py  interpreter.py  type_system.py
(+191 files in other folders)
