[package]
name = "open-flow-algorithm"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_flow_algorithm_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["process", "io-util", "sync", "macros", "time"] }
